[package]
name = "rust-iost"
version = "0.1.0"
authors = ["alexgituser <alexgituser@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
reqwest = { version = "0.10.0", features = ["json"] }
tokio = { version = "0.2.6", features = ["macros"] }
async-trait = "0.1.21"
secp256k1 = "0.17.1"
crypto = "0.0.2"
ed25519 = "0.2.0"
digest = "0.8.1"
sha3 = "0.8.2"
byteorder = "1.3.2"