[package]
name = "iost-chain"
version = "0.1.0"
authors = ["alexgituser <alexgituser@email.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.21"
byteorder = "1.3.2"
crypto = "0.0.2"
digest = "0.8.1"
ed25519 = "0.2.0"
iost-derive = { path ="../iost-derive" }
itoa = "0.4.4"
reqwest = { version = "0.10.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
secp256k1 = "0.17.1"
sha3 = "0.8.2"
tokio = { version = "0.2.6", features = ["macros"] }
