[package]
name = "iost-derive"
version = "0.2.1"
authors = ["alexgituser <alexgituser@email.com>"]
edition = "2018"
include = [
    "/Cargo.toml",
    "/src/**/*.rs",
    "/README.md",
]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "1.0.11"
proc-macro2 = "1.0.6"
quote = "1.0.2"

[features]
default = []