[package]
name = "iost-keys"
version = "0.1.0"
authors = ["alexgituser <alexgituser@email.com>"]
edition = "2018"
description = "Pure Rust implementation of Secp256k1 and ed25519 crypto for IOST"

[dependencies]
bitcoin_hashes = { version = "0.7", default-features = false }
base58 = { version = "0.1.0", default-features = false, optional = true }
base64 = { version = "0.12.3", default-features = false, optional = true, features= ["alloc"] }
byteorder = { version = "1.3", default-features = false }
hex = { version = "0.4", default-features = false }
libsecp256k1 = { git = "https://github.com/bifrost-codes/libsecp256k1.git", default-features = false, features = ["hmac"] }
rand = { version = "0.7", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "1.0.0-pre.3", default-features = false, optional = true, features = ["u64_backend", "alloc"] }
signature = {version = "1.2.2", default-features = false}

[dev-dependencies]
#ed25519-dalek = { version = "1.0.0-pre.3", default-features = false, features = ["u64_backend", "alloc"] }

[features]
default = ["std"]
std = [
    "base58",
    "base64/std",
    "rand/std",
    "ed25519-dalek/std",
    "signature/std"
]
