[package]
name = "iost-rpc"
version = "0.1.0"
authors = ["alexgituser <alexgituser@email.com>"]
edition = "2018"

[dependencies]
async-trait = { version = "0.1.21"}
byteorder = { version = "1.3.2"}
crypto = { version = "0.0.2" }
digest = { version = "0.8.1" }
iost-derive = { path ="../iost-derive" }
itoa = "0.4.4"
reqwest = { version = "0.10.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
tokio = { version = "0.2.6", features = ["macros"] }
